# rAPIdy

./: .gitignore  .pre-commit-config.yaml  CNAME  CONTRIBUTING.md  CONTRIBUTORS  LICENSE  README.md  ROADMAP.md  dev.requirements.txt  main.py  pyproject.toml  versions.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  new_feature.yml
.github/workflows/: release.yml  test.yml
1.1.0/: sitemap.xml
1.1.0/about/: index.html
1.1.0/docs/enums/: index.html
1.1.0/docs/mypy/: index.html
1.1.0/docs/server/http_errors/: index.html
1.1.0/docs/server/middlewares/: index.html
1.1.0/docs/server/request/: index.html
1.1.0/examples/http_caching/: index.html
1.1.0/ru/docs/: index.html
1.1.0/ru/docs/lifespan/: index.html
1.1.0/ru/quickstart/: index.html
1.1.0/search/: search_index.json
1.1.0/why/: index.html
1.1.1/: 404.html  index.html
1.1.1/aiohttp_migration/: index.html
1.1.1/docs/dependency_injection/: index.html
1.1.1/docs/lifespan/: index.html
1.1.1/docs/server/application/: index.html
1.1.1/docs/server/response/: index.html
1.1.1/home/: index.html
1.1.1/quickstart/: index.html
1.1.1/ru/about/: index.html
1.1.1/ru/docs/encoders/: index.html
1.1.1/ru/docs/enums/: index.html
1.1.1/ru/docs/server/: index.html
1.1.1/ru/home/: index.html
1.1.2/: sitemap.xml
1.1.2/docs/: index.html
1.1.2/docs/encoders/: index.html
1.1.2/docs/server/: index.html
1.1.2/ru/: index.html
1.1.2/ru/aiohttp_migration/: index.html
1.1.2/ru/examples/: index.html
1.1.2/ru/why/: index.html
docs/: mkdocs.yml
docs/docs/: extra.css
docs/docs/en/: about.md  bug.md  contributing.md  examples.md  home.md  index.md  quickstart.md  roadmap.md
docs/docs/ru/: bug.md  examples.md  home.md  index.md  quickstart.md
docs/examples/examples/projects/base/: .pre-commit-config.yaml  pyproject.toml
docs/examples/examples/projects/base/src/: __main__.py  api.py  application.py  config.py  di.py  middlewares.py  providers.py
docs/examples/examples/projects/base/tests/: conftest.py
docs/examples/examples/projects/base/tests/test_api/: test_hello.py
docs/examples/index/: ex.py  ex_failure_validation.sh  ex_failure_validation_result.txt  ex_success_validation.sh  ex_success_validation_result.txt
docs/examples/quickstart/: ex_class_handler.py  ex_func_handler_01.py  ex_func_handler_02.py  ex_middleware.py  ex_runserver_gunicorn.sh  ex_runserver_simple.py  ex_validation.py
examples/: app.py
rapidy/: __init__.py  _annotation_container.py  _annotation_extractor.py  _annotation_helpers.py  _base_exceptions.py  _client_errors.py  _constants.py  _endpoint_handlers.py  _endpoint_helpers.py  _endpoint_model_field.py  _endpoint_validation_wrappers.py  _extractors.py  _field_info.py  _fields.py  _lifespan.py  _parsers.py  _request_extractors.py  _request_handlers.py  _request_param_field_info.py  _request_param_model_field.py  _request_params_base.py  _request_validation_wrappers.py  _validators.py  _version.py  _web_request_validation.py  annotation_checkers.py  constants.py  depends.py  encoders.py  enums.py  fields.py  hdrs.py  http.py  lifespan.py  media_types.py  request_enums.py  request_parameters.py  request_params.py  streams.py  typedefs.py  (+11 more)
rapidy/_annotations/: container.py  extractor.py  extractor_helpers.py
rapidy/_fields/: field_info.py  model_field.py
rapidy/endpoint_handlers/: attr_containers.py  attr_extractor.py  validation.py
rapidy/endpoint_handlers/http/: annotation_checkers.py  attr_containers.py  attrs_extractor.py  controller.py  fields.py  handlers.py
rapidy/fields/: field_info.py  model_fields.py
rapidy/mypy/: __init__.py  _api_errors.py  _type_helpers.py  _version.py  plugin.py
rapidy/openapi/: __init__.py  models.py  route.py  utils.py
rapidy/parameters/: http.py
rapidy/request/: _enums.py  _extractors.py  parameters.py
rapidy/request/_validate/: helpers.py  validators.py
rapidy/routing/http/: base.py  helper_types.py  routers.py
tests/: app_checkers.py  constants.py  helpers.py  test_add_attrs.py  test_lifespan.py  test_openapi.py  test_openapi_example.py  test_server_info.py
tests/handlers/: conftest.py  test_annotations.py  test_default.py  test_definition.py  test_not_allowed_method.py  test_request_field.py  test_success_get_all_params.py  test_unannotated.py  test_validation_failure.py
tests/handlers/body/: test_body_params.py  test_extraction_failure.py  test_success_extract.py
tests/middlewares/: test_error_catch.py  test_middlewares_works.py
tests/mypy/: default_pyproject.toml  test_mypy.py
tests/test_application/: test_lifespan.py  test_server_info.py
tests/test_di/: test_di.py
tests/test_handlers/: test_all_handler_types.py  test_content_type.py  test_get_all_params.py  test_raw_data_miltidict_dataclasses.py  test_request_field.py  test_unannotated.py  test_union_datatype.py  test_validation_failure.py
tests/test_handlers/test_annotations/: test_another_ext_type_already_exists.py  test_field_name_already_exists.py  test_incorrect_rapid_param.py  test_instance_and_type.py  test_param_type_annotation_empty.py  test_pydantic_annotated_types.py  test_unannotated.py  test_unsupported_pydantic_validate_type.py
tests/test_handlers/test_default/: base.py
tests/test_handlers/test_responses/: test_404.py  test_405.py  test_json_response.py  test_response.py
tests/test_http/test_router/: helpers.py  test_add_routers.py  test_all.py  test_controller.py  test_view.py
tests/test_jsonify/: test_base_model_fields.py  test_prepare_complex_objects.py  test_prepare_simple_objects.py
tests/test_jsonify/test_additional_attrs/: test_base_model.py  test_inherited_base_model.py
tests/test_middlewares/: test_error_catch.py  test_middlewares_works.py
tests/test_mypy/: strict_pyproject.toml  test_mypy.py
tests/test_prepare_to_json/: test_base_model_fields.py  test_prepare_complex_objects.py  test_prepare_simple_objects.py
tests/test_prepare_to_json/test_additional_attrs/: test_base_model.py  test_dict.py  test_inherited_base_model.py
tests/test_static/: test_static.py
(+651 files in other folders)
